fix z-index & and ClassStyles parameter #4573

--- a/src/BlazorUI/Bit.BlazorUI/Components/Modal/BitModal.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Modal/BitModal.scss
@@ -37,8 +37,8 @@
 
 .bit-mdl-ovl {
     inset: 0;
+    z-index: 0;
     position: absolute;
-    z-index: $zindex-overlay;
     background-color: $color-background-overlay;
 }
 
